<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/splash_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/spotify_button"
        style="@style/PortfolioButton"
        android:onClick="launchApp"
        android:text="@string/spotify_text" />

    <Button
        android:id="@+id/scores_button"
        style="@style/PortfolioButton"
        android:onClick="launchApp"
        android:text="@string/scores_text" />

    <Button
        android:id="@+id/library_button"
        style="@style/PortfolioButton"
        android:onClick="launchApp"
        android:text="@string/library_text" />

    <Button
        android:id="@+id/bigger_button"
        style="@style/PortfolioButton"
        android:onClick="launchApp"
        android:text="@string/bigger_text" />

    <Button
        android:id="@+id/zyx_button"
        style="@style/PortfolioButton"
        android:onClick="launchApp"
        android:text="@string/zyx_text" />

    <Button
        android:id="@+id/myownapp_button"
        style="@style/PortfolioButton"
        android:onClick="launchApp"
        android:text="@string/myownapp_text" />
</LinearLayout>
